Fixing some things
